# qeaas_esp32_client

./: .gitignore  README.md  requirements.txt
mbedtls/: CMakeLists.txt  Kconfig  build_test.sh  prj.conf  sample.yaml  west.yml
mbedtls/boards/: esp32_devkitc_esp32_procpu.overlay  esp32_devkitc_wroom_procpu.conf
mbedtls/include/: config-mbedtls-libcoap.h  wifi.h
mbedtls/src/: main.c  wifi.c
scripts/: build.sh  build_libcoap.sh  generate_certs.sh
